...
        baseColor: Color(0xFFa1a1a1),
        highlightColor: Color(0xFFe1e1e1),
        child: ListView.builder(
          shrinkWrap: true,
          itemBuilder: (context, index) {
            return Container(
              key: Key('article_list_item'),
              margin: EdgeInsets.only(
                bottom: 16,
                left: defaultMargin,
                right: defaultMargin,
              ),
              child: Row(children: [
...
