...
      height: 120,
      width: double.infinity,
      color: kWhiteColor,
      child: Padding(
        padding: const EdgeInsets.only(left: 24, right: 24),
        child: ListView(
            key: Key('article_category'),
            scrollDirection: Axis.horizontal,
            children: [
              GestureDetector(
                  onTap: () => Navigator.push(
                      context,
                      MaterialPageRoute(
...
