...
                        Text(
                          widget.article.content ?? '',
                          style: greyTextStyle.copyWith(fontSize: 14),
                        ),
                        SizedBox(height: 20),
                        CustomButton(
                          key: Key('button_read_more'),
                          title: 'Read More',
                          onPressed: () => Navigator.push(
                              context,
                              MaterialPageRoute(
                                builder: (context) =>
                                    ArticleWebviewPage(url: widget.article.url),
...
